fix(docs): fix jump nav

--- a/docs/src/components/css/style.css
+++ b/docs/src/components/css/style.css
@@ -22,7 +22,7 @@
 
 .page-scroll {
   overflow-y: scroll;
-  scroll-behavior: smooth;
+  height: 100vh;
 }
 
 .list {
@@ -96,7 +96,3 @@ table td {
   border: none;
 }
 
-.jump-nav {
-  overflow-y: scroll;
-  height: 100vh;
-}
